<?xml version="1.0"?>
<package format="3">
  <name>pid</name>
  <version>0.0.28</version>
  <description>Launch a PID control node.</description>

  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pid</url>

  <author email="andyz@utexas.edu">Andy Zelenak</author>
  <author>Paul Bouchier</author>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  
  <!-- Use exec_depend for runtime dependencies: -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- <exec_depend>dynamic_reconfigure</exec_depend> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
